Add noindex to page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
 <head>
+  <meta name="robots" content="noindex" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bulletin d'inscription 2024-2025</title>
