Add info for signature on mobile

--- a/index.html
+++ b/index.html
@@ -333,6 +333,10 @@
           Signature <small>(Pour les mineurs, représentant légal)</small><br>
           Lu et approuvé
         </div>
+        <div class="d-sm-none alert alert-info">
+          Sur téléphone, si la page bouge pendant la signature, tapez sur l'écran sans relâcher, attendez une petite seconde et commencez
+          votre signature. Réappliquez la méthode à chaque fois que le doigt quitte l'écran et retape dessus.
+        </div>
         <canvas class="border-1 border-black border w-100" style="height: 140px" id="signature-canvas"></canvas>
         <button type="button" class="btn btn-secondary" id="signature-efface">Effacer la signature</button>
         <div>
