Hide alert on print

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <section id="certificat-medical">
     <h2 class="bg-secondary-subtle text-center text-sm-start">Certificat médical</h2>
-    <div class="alert alert-info">
+    <div class="alert alert-info d-print-none">
       Un certificat médical est demandé pour toute nouvelle inscription. Une attestation de santé sera demandée
       pour proroger d'année en année la validité du certificat médical dans la limite de 5 saisons consécutives.
     </div>
