--- a/index.html
+++ b/index.html
@@ -358,10 +358,12 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="./js/signature.js"></script>
 <script src="./js/cotisation.js"></script>
+<script src="js/autogrow.js"></script>
 <script>
   window.addEventListener('load', () => {
     cotisation();
     signature();
+    autogrow();
   });
 </script>
 </body>
