--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class="container-xxl p-sm-0">
   <header class="row">
-    <div class="col-12 col-sm-2 text-center text-sm-center">
-      <img src="img/logo.jpg" alt="ASVF Montagne">
+    <div class="col-4 offset-4 col-sm-2 offset-sm-0 text-center text-sm-center">
+      <img alt="ASVF Montagne" src="img/logo.png" class="img-fluid">
     </div>
     <div class="col-12 col-sm-10 text-center">
       <h1 class="fs-4">ASSOCIATION SPORTIVE DE VILLEFONTAINE-SECTION MONTAGNE</h1>
@@ -24,7 +24,7 @@
         Agrément sport DDJS n°10/75-38S142- SIRET (ASVF) 325 919 595 00034
       </small>
     </div>
-    <div class="col-12 text-center fw-bolder">
+    <div class="col-12 text-center fw-bolder mt-4">
       <h1>Inscription 2024 - 2025</h1>
     </div>
   </header>
