--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@ Téléphone en cas d'urgence et adresse mail du responsable légal.</textarea>
         </div>
       </div>
     </div>
+    <div class="alert alert-info d-print-none">
+      Vous pouvez envoyer un chèque à l'ordre de l'ASVF Montagne, à l'adresse indiquée en haut de ce bulletin. <br>
+      Ou effectuer un virement sur le compte suivant :<br>FR76 1382 5002 0008 0018 5201 990 (BIC : CEPAFRPP382)
+    </div>
   </section>
 
   <section id="certificat-medical">
