Add info requirements about bank transfer

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@ Téléphone en cas d'urgence et adresse mail du responsable légal.</textarea>
     </div>
     <div class="alert alert-info d-print-none">
       Vous pouvez envoyer un chèque à l'ordre de l'ASVF Montagne, à l'adresse indiquée en haut de ce bulletin. <br>
-      Ou effectuer un virement sur le compte suivant :<br>FR76 1382 5002 0008 0018 5201 990 (BIC : CEPAFRPP382)
+      Ou effectuer un virement sur le compte suivant :<br>FR76 1382 5002 0008 0018 5201 990 (BIC : CEPAFRPP382).
+      Merci d'indiquer le nom et le prénom de la personne inscrite dans la référence ou le commentaire du virement.
     </div>
   </section>
 
