Rename buttons for clarification

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Téléphone en cas d'urgence et adresse mail du responsable légal.</textarea>
     <div class="row">
       <div class="col-12">
         <div class="alert alert-info">
-          Vous pouvez imprimer cette page dans un fichier pdf après l'avoir remplie et nous faire parvenir le pdf par mail. <br>
+          Vous pouvez enregistrer cette page dans un fichier pdf après l'avoir remplie et nous faire parvenir le pdf par mail. <br>
           Dans les paramètres d'impression, pensez à décocher l'option "imprimer les en-têtes et pieds de page" et à cocher "imprimer les arrières-plans".
         </div>
       </div>
@@ -375,7 +375,7 @@ Téléphone en cas d'urgence et adresse mail du responsable légal.</textarea>
 
     <div class="row bg-secondary-subtle border-top border-secondary py-4">
       <div class="col-12 text-center">
-        <button type="button" class="btn btn-primary btn-lg px-5 py-4" onclick="window.print()">Imprimer</button>
+        <button type="button" class="btn btn-primary btn-lg px-5 py-4" onclick="window.print()">Enregistrer au format PDF</button>
       </div>
     </div>
   </section>
