--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Téléphone en cas d'urgence et adresse mail du responsable légal.</textarea>
     </div>
   </section>
 
-  <section id="cotisation">
+  <section id="cotisation" class="page-break">
     <h2 class="bg-secondary-subtle text-center text-sm-start">Détail des cotisations</h2>
     <div class="row mb-2">
       <label for="cotisation-group" class="col-form-label col-3 col-sm-3">Groupe</label>
